# AetherOS

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  android_architecture.md  completion_report.md  ecosystem_bridge.md  run.sh  rust-toolchain.toml  wasm_integration_plan.md
.github/workflows/: build.yml
abi/: Cargo.toml
abi/src/: lib.rs
aether-core/: Cargo.toml
aether-core/src/: backend.rs  lib.rs  scheduler.rs
aetheros/: Cargo.toml
aetheros/src/: main.rs
aetheros/src/backend/: android.rs  dragonfly.rs  freebsd.rs  linux.rs  macos.rs  mod.rs  netbsd.rs  openbsd.rs  windows.rs
apps/hello_world/: Cargo.toml  layout.ld  repro.rs
apps/hello_world/.cargo/: config.toml
apps/hello_world/src/: main.rs
apps/wasm_simple/: Cargo.toml
apps/wasm_simple/.cargo/: config.toml
apps/wasm_simple/src/: lib.rs  main.rs
kernel/: Cargo.toml  build.rs  entitlements.plist
kernel-uefi/: Cargo.toml
kernel-uefi/.cargo/: config.toml
kernel-uefi/src/: main.rs
kernel/src/: main.rs  scheduler.rs
kernel/src/backend/: android.rs  dragonfly.rs  freebsd.rs  linux.rs  macos.rs  mod.rs  netbsd.rs  openbsd.rs  windows.rs
tools/mkext2/: Cargo.toml
tools/mkext2/src/: main.rs
user/: Cargo.toml
user/src/: console.rs  font.rs  lib.rs
user/src/fs/: mod.rs
