[package]
name = "aetheros"
version = "0.1.0"
edition = "2021"
description = "AetherOS - Cross-platform software stack for desktop and embedded"

[dependencies]
aether-abi = { path = "../abi" }
aether-core = { path = "../aether-core" }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
minifb = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
minifb = "0.27"
kvm-ioctls = "0.19"
kvm-bindings = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
minifb = "0.27"
windows = { version = "0.58", features = ["Win32_System_Hypervisor", "Win32_Foundation"] }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[build-dependencies]
