[package]
name = "aether-kernel-uefi"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.28", features = ["alloc"] } # "alloc" for Vec/String
uefi-services = "0.25"
log = "0.4"
aether-abi = { path = "../abi" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86 specific deps if needed

[target.'cfg(target_arch = "aarch64")'.dependencies]
# arm specific deps if needed
