[package]
name = "aether-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-abi = { path = "../abi" }
libc = "0.2"

[dependencies]
aether-abi = { path = "../abi" }
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
minifb = "0.24"




[build-dependencies]
