[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-abi = { path = "../abi" }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
minifb = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
minifb = "0.27"
kvm-ioctls = "0.19"
kvm-bindings = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
minifb = "0.27"
windows = { version = "0.58", features = ["Win32_System_Hypervisor", "Win32_Foundation"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android uses KVM too but different bindings, stub for now
libc = "0.2"

[build-dependencies]
